[tool.poetry]
name = "finance-investment-saxobankvalueatrisk"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"
packages = [{include = "finance"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "private"
url = "http://pypi.mw.local"
priority = "primary"


[tool.poetry.dependencies]
python = "^3.11"
extensions-opentelemetry = "^0.1.1"
httpx = "^0.27.0"
yfinance = "^0.2.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
